add pom configuration for building docker image
add loggers to "test" api