@@ -46,6 +46,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>--enable-preview</jvmArguments>
+					<image>
+						<name>hn-service-vt</name>
+					</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
